Minor text edits and added Resume + Profile pic

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
       <!-- MOBILE NAVIGATION -->
       <div class="w3-container w3-padding-16 w3-border-bottom w3-hide-medium w3-hide-large">
-        <a href="#home" class="w3-bar-item w3-button w3-hover-none">LANDING</a>
+        <a href="#home" class="w3-bar-item w3-button w3-hover-none">PERSONAL PORTFOLIO</a>
         <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="toggleNavigation()">&#9776;</a>
       </div>
       <div id="mobile-nav" class="w3-bar-block w3-hide w3-hide-large w3-hide-medium w3-sticky">
@@ -80,7 +80,7 @@
       <!-- SOCIAL SECTION -->
       <section class="image-section w3-quarter w3-fixed w3-padding-small">
         <!--IMAGE/AVATAR-->
-        <img src="avatar.png" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
+        <img src="./media/personalPic.JPG" class="w3-circle w3-border w3-border-sand" style="border-width: 3px !important;"/>
         <!--SCIAL NETWORK BUTTONS-->
         <div class="links w3-margin-top w3-padding-small">
           <a class="icon-link w3-text-sand w3-hover-text-amber" href="https://github.com/antc3519" target="_blank">
@@ -95,7 +95,7 @@
         </div>
         <!--CV DOWNLOAD BUTTON-->
         <div class="w3-container w3-padding-16">
-          <a href="./resume.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="resume.pdf">
+          <a href="./media/resume.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="resume.pdf">
             <i data-feather="arrow-down" style="vertical-align: -0.35em;"></i>
             <span class="w3-margin-left download-text">DOWNLOAD CV</span>
           </a>
@@ -115,8 +115,8 @@
         <div class="content-container w3-margin-top-2">
           <!--HOME SECTION-->
           <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
-            <p style="font-style: italic; font-size:x-large;">"The mind is the limit. When you face your struggles, you overcome them."</p>
-            <h1>Anthony M Caruso</h2>
+            <p style="font-style: italic; font-size:x-large;">"Impossibilities are possibilities waiting to be achieved."</p>
+            <h1>Anthony Caruso</h2>
             <h2>Software Engineer & Entrepreneur</h3>
             <p></p>
           </div>
@@ -126,15 +126,15 @@
             <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">ABOUT</h2>
             <div class="w3-container w3-margin-top-2 w3-cursive">
               <p class="w3-margin-top-2"> 
-                I am a student, developer, traveler, game enthusiast, and co-founder of ReFilament! Currently, 
+                I am a student, developer, traveler, game enthusiast, and Entrepreneur! Currently, 
                 I am an undergraduate student at the New Jersey Institute of Technology pursuing a degree in 
-                Computer Science. Currently, I spend most of my time between classes, building NJIT's Startup
-                community at NJII, and engaging with my community through the various clubs and community 
+                Computer Science. I spend most of my time running between classes, building NJIT's Startup
+                community through my position at NJII, and engaging with my community through the various clubs and community 
                 service organizations I work with!
               </p>
               <p class=""> 
                 Nothing makes me happier than building or designing something that can help others (or is just 
-                fun and crazy!) This website itself is hopefully a good example, but on top of it I have designed 
+                fun and crazy!) This portfolio itself is a good example, but on top of it I have designed 
                 and maintained professional websites and resources for a few organizations and companies I worked 
                 with in the past! I am confident in my abilities and can fill a plethora of roles on any team with 
                 my experience and comprehension skills, plus I am a friendly and outgoing individual! 
@@ -142,9 +142,9 @@
               </p>
               <p class=""> 
                 Feel free to start a conversation with me through my email/socials or just say hi! I am always more 
-                than happy to meet and connect with new people! Also check out some of the random projects I have on
-                my github profile! Most of them are from coding assignments and previous personal websites, but if you
-                are interested in learning more about non-code projects I have worked on, refer to my resume below!
+                than happy to meet and connect with new people. Also check out some of the projects I have on
+                my github profile! Most of them are from coding assignments and previous websites, but if you
+                are interested in learning more about other things I have worked on, keep reading!
               </p>
             </div>
           </div>
